public/css/style.css
@media print {
	.col-md-2, .with-sidebar {
		display: none;
	}
}

body {
  padding-top: 40px; /* 40px to make the container go all the way to the bottom of the topbar */
  font-family: "Ubuntu";
  background-image: url(../img/bodybg.png);
}

a[href^="https://"],
a[href^="http://"] {
  background: url(../img/ext.png) center right no-repeat;
  padding-right: 13px;
}

a.logout i {
  color: orange;
  margin-left: .5em;
}

.code a[href^="https://"],
.code a[href^="http://"] {
  background: none;
  padding-right: 0;
}

p.user {
  color: white;
  padding: 8px 0 0;
  margin-bottom: 0px;
  margin-right: -20px;
}

#main {
  background-color: white;
  box-shadow: 0 0 5px silver;
  z-index: 2;
}

#content {
  padding: 20px 5px;
  padding-bottom: 5px;
  overflow: hidden;
}

#content.show {
  font-family: Palatino, "Palatino Linotype", Georgia, Times, "Times New Roman", "Microsoft YaHei", SimHei, STHeiti, serif;
  font-size: 15px;
}

#content img {
  display: block;
  max-width: 100%;
  height: auto;
}

#content.show li {
  line-height: 1.5;
}

#content.show ul >li:first-child {
  margin-top: 4px;
}

.modal-body #content {
  box-shadow: none;
  padding: 10px;
  overflow: hidden;
}

.modal-content {
  border-radius: 0;
}

.modal-dialog {
  margin-top: 5rem;
}

.modal-dialog .modal-header {
  background-color: #f1f1f1
}

.modal-dialog .modal-header h3 {
  margin: 0;
  font-weight: bold;
}

blockquote {
  text-indent: -1ex;
  padding-right: 15px;
  color: #553;
  font-size: 14px;
  border-left-color: #e6f1f6
}

blockquote p:before {
  content: '“';
}

blockquote p:after {
  content: '”';
}

label {
  font-weight: bold;
}

p {
  margin-bottom: 20px;
  line-height: 1.5;
}

hr {
  border-color: #e1e1e1;
}

dl.search-results dd {
  margin-bottom: 15px;
  margin-left: 20px;
}

dl.search-results dt {
  font-size: 120%;
}

h2,
h1 {
  border-bottom: 1px solid #ddd;
  font-family: "Ubuntu Condensed";
  margin: 0 0 20px 0;
}

h1 {
  font-size: 32px;
}

h2 {
  font-size: 24px;
}

h3 {
  font-size: 18px;
}

h3 {
  margin: 0 0 10px 0;
}

h2, h3, h4, h5 {
  padding-top: 60px;
  margin-top: -60px;
}

h1 a, h1 a:hover,
h2 a, h2 a:hover,
h3 a, h3 a:hover,
h4 a, h4 a:hover {
  color: inherit;
}

hr {
  background: transparent url(../img/hr-bg.png) repeat-x 0 0;
  border: 0 none;
  color: #ccc;
  height: 4px;
  padding: 0;
  margin: 10px 0;
}

#content > table {
  display: block;
  width: 100%;
  overflow: auto;
  margin-bottom: 16px;
}

#content > table td,
#content > table th {
  padding: 6px 13px;
  border: 1px solid #ddd;
}

#content > table thead {
  background-color: #eee;
}

#content .history img {
  display: inline;
}

.history td:first-child {
  width: 10px;
}

.history td:nth-child(3) {
  white-space: nowrap;
}

.history td:nth-child(4) {
  max-width: 200px;
  text-overflow: ellipsis;
  overflow: hidden;
}

.history td.revert a {
  color: black;
  font-size: 16px;
}

.page-param {
  color: gray;
}

.compare {
  font-family: Consolas, monospace;
  font-size: 12px;
}

.compare td {
  padding: 0 3px;
  border-top-width: 0
}

.compare .gd {
  background-color: #ffdddd;
}

.compare .gc {
  color: #999999;
  background-color: #EAF2F5;
}

.compare .gi {
  background-color: #ddffdd;
}

.compare .ln {
  width: 1%;
  color: #999999;
  background-color: #EAF2F5;
  text-align: right;
  border-bottom-color: transparent;
}

.input-group.search {
  max-width: 250px;
}

.input-group.search input {
  color: #fff;
  background-color: #515151;
  border-color: #111;
}

/* Overrides Bootstrap */

.navbar-right {
  float: right;
}

.navbar-form {
  padding: 0;
  margin-top: 5px;
}

.navbar-form.search {
  display: none;
}

.navbar-header {
  width: 100%;
}

.navbar-brand {
  overflow: hidden;
  max-width: 60%;
}

.navbar-inverse {
  background-color: rgba(0,0,0);
}

.alert {
  border: 1px solid #E8E2BF;
  border-radius: 0;
}

.alert ul {
  padding-left: 1em;
}

.alert li:last-child {
  margin-bottom: 0
}

.navbar-inverse .navbar-inner {
  background-image: none;
}

.jumbotron {
  margin-bottom: 0;
}

code {
  color: #555;
  white-space: nowrap;
  background-color: #f7f7f9;
  border: 1px solid #e1e1e8;
  border-radius: 3px;
  font-size: 85%;
  display: inline-block !important;
  max-width: 100% !important;
  font-family: "Menlo",Consolas,"Liberation Mono",Menlo,Courier,monospace !important;
}

code.md-code {
  background-color: #f7f7f9;
  white-space: nowrap;
  padding: 0;
  display: block;
  margin-bottom: 20px;
  border-width: 0;
}

code.md-code code {
  padding: 0; /* WTF, Bootstrap? */
  border-width: 0;
}

code.plain {
  padding: 0;
}

ol, ul {
  margin-bottom: 20px;
}

p + ol,
p + ul {
  margin-top: -15px;
}

.doc-list h4 {
  margin: 0;
  padding: 10px;
  background-color: #e6f1f6;
}

ul.doc-list {
  margin: 0;
  padding: 0;
}

ul.doc-list > li {
  list-style-type: none;
  margin-bottom: 20px;
  position: relative;
  border: 1px solid #E6F1F6;
  transition: all .2s;
  top: 0;
  transform: scale(1);
  background-color: white;
}

ul.doc-list > li:hover {
  top: -2px;
  transform: scale(1.01);
}

.footer {
  background-color: white;
  border-top: 1px solid #c1c1c1;
  color: #c1c1c1;
  padding: 25px;
  margin: 0;
  font-size: 90%;
}

ul.doc-list > li .content {
  font-size: 90%;
  color: #808080;
  background-color: transparent;
  box-shadow: none;
}

ul.doc-list > li .meta {
  background-color: white;
  border-bottom: 1px dashed #e6f1f6;
  clear: both;
  padding: 2px 10px;
}

ul.doc-list > li .date {
  border-bottom: 1px dotted gray;
}

ul.doc-list > li .message {
  padding: 10px;
}

.page-actions {
  float: right;
  margin: 8px 10px 10px 0;
  padding: 0;
}

.page-actions li {
  list-style-type: none;
  display: inline-block;
}

.doc-list .page-actions a {
  font-size: 18px
}

.tools {
  position: fixed;
  z-index: 4;
  margin-top: -62px;
  background-color: rgba(27,27,27,.3);
  border: 1px solid gray;
  padding: 0px 5px;
  right: 0;
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
}

.tools > ul {
  position: relative;
  text-align: center;
  margin: 0;
  padding: 0;
  line-height: 250%;
  background-color: rgba(27,27,27,0);
  border-bottom-left-radius: 5px;
}

.tools > ul > li {
  display: inline;
  list-style-type: none;
}

.page-actions a.btn,
.tools a.btn {
  font-size: 18px;
  padding: 0 10px;
  margin-bottom: -3px;
  background-color: #f5f5f5;
}

.page-actions a.hover,
.tools a:hover {
  color: #4183c4;
}

.tools-handle {
  background-color: #4183c4;
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
  position: absolute;
  width: 35px;
  height: 14px;
  right: 0;
  left: 75%;
  color: white;
  top: 62px;
  text-align: center;
  font-size: 9px;
  line-height: 12px;
  margin: 0;
}

/* Needed for wideArea */
.markItUpHeader {
  position: relative;
  z-index: 2;
}

.markItUpEditor {
  height: 500px !important;
  font-family: Consolas, monospace !important;
}

.toolbar {
  padding: 0;
  margin: 0;
  text-align: right
}

.toolbar li {
  list-style-type: none;
  display: inline-block;
  margin-right: 8px;
  width: 16px;
  height: 16px;
}

.toolbar li span {
  display: inline-block;
  width: 16px;
  height: 16px;
  cursor: pointer;
  background-repeat: no-repeat;
}

.toolbar li.fullscreen span {
  background-image:url(../img/fullscreen_16.png);
}
.toolbar li.info span {
  background-image:url(../img/info_16.png);
}
.toolbar li.preview span {
  background-image:url(../img/preview_16.png);
}

.toolbar.fullscreen {
  position: fixed;
  top: 50px;
  right: 20px;
  z-index: 10;
}

input#pageTitle {
  font-weight: bold;
  font-size: 130%;
}

.cheatsheet-content {
  overflow: auto;
}

.cheatsheet-content .col {
  float: left;
  width: 30%;
  margin-left: 10px;
}

.cheatsheet-content pre {
  border: 1px solid #ddd;
  background-color: #eee;
  border-radius: 3px;
  width: 100%;
  padding: 5px;
  font-size: 12px;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

.cheatsheet-content hr {
  clear: both;
}

.search-results .nl {
  color: #aaa;
}

.search .search-form {
  margin-bottom: 20px;
}

.with-sidebar {
  background-color: rgba(255,255,255,0.5);
  padding: 10px;
  overflow: auto;
  box-shadow: 0 0 5px silver;
}

.with-footer  {
  background-color: rgba(255,255,255,0.5);
  padding: 20px;
  overflow: auto;
  box-shadow: 0 0 5px silver;
  z-index: 1;
}

a.absent {
  color: red;
}

form.edit {
  border-radius: 4px;
  margin: 0;
}

li {
  margin-bottom: 5px;
}

.jumbotron p.discrete {
  color: gray;
  font-size: 90%
}

.paginator {
  margin: 0;
  padding: 0;
  text-align: center;
}

.paginator li {
  display: inline-block;
  list-style-type: none;
  width: 3rem;
  background-color: #e6f1f6;
  border: 1px solid transparent;
}

.paginator li a {
  display: block;
  width: 100%;
}

.paginator li.current {
  box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
}

a.btn-auth {
  background-image: url(../img/login-providers.png);
  background-repeat: no-repeat;
  display: block;
  height: 5rem;
  width: 40%;
  background-size: cover;
  color: transparent;
}

a.btn-auth.btn-auth-google {
  background-position: 0px 103%;
}

a.btn-auth.btn-auth-github {
  background-position: 0px 50%;
}

a.btn-auth:hover {
  opacity: .9;
}

a.header-anchor {
  font-size: 8px;
  text-align: center;
  color: lightgray;
}

nav#toc {
  font-family: "Ubuntu Condensed";
}

@media (min-width: 768px) {
  body {
    padding-top: 60px;
  }

  p.user {
    margin-right: auto;
  }

  #content {
    padding: 40px 25px;
  }

  .navbar-form.search {
    display: block;
  }

  .tools {
    right: 280px;
  }

  .tools-handle {
    top: 41px;
    left: 60%;
  }
}

